SAKIII-2526 fixing spacing of the icon

--- a/devwidgets/entity/css/entity.css
+++ b/devwidgets/entity/css/entity.css
@@ -88,7 +88,7 @@
 .entity_tags_link div,.entity_locations_link div{border:1px solid #fff;}
 .entity_tags_link:hover div,.entity_locations_link:hover div{border:1px solid #ddd;}
 .entity_list_open div{border:1px solid #ddd!important;}
-#entity_tags_link span,#entity_locations_link span{padding:0 10px 0 5px; font-size:12px; font-weight:bold;}
+#entity_tags_link span,#entity_locations_link span{padding:0 6px 0 5px; font-size:12px; font-weight:bold;}
 #entity_tags_dropdown_arrow{height:8px;width:8px;background:url(/dev/images/dashboard_sprite.png) no-repeat scroll -129px -395px transparent;}
 #entity_tags_link_menu,#entity_locations_link_menu{background-color:#FFF;position:absolute;z-index:400;min-width:100px;max-width:300px;border:1px solid #ddd;}
 #entity_tags_link_menu .entity_tags_link_menu_list,#entity_locations_link_menu .entity_locations_link_menu_list{padding:5px;}
